--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
+    "@react-native-mapbox-gl/maps": "^8.2.0-beta2",
     "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "@turf/helpers": "^6.3.0",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
