--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-barcode-builder": "^2.0.0",
+    "react-native-barcode-svg": "0.0.15",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.0",
