--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.64.1",
     "react-native-barcode-builder": "^2.0.0",
     "react-native-barcode-svg": "0.0.15",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
